<resources>
    <string name="app_name">Project2_WOD_CS</string>
    <string name="log_in">Log In!</string>
    <string name="username">Username</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="password_again">Password Again</string>
    <string name="sign_up">Sign Up!</string>
    <string name="welcome_to_wodcs">Welcome to WODCS</string>
    <string name="wodcs_log_in">WODCS Log In</string>
    <string name="player">Player</string>
    <string name="storyteller">Storyteller</string>
    <string name="games">Games</string>
    <string name="preference_userId_key">WODCSUserIdPreferencesKey</string>
    <string name="preference_file_key">WODCSPreferencesFileName</string>
    <string name="logout">Logout</string>
    <string name="return_to_main_page">Return To Main Page</string>
    <string name="wodcs_sign_up">WODCS Sign Up</string>
    <string name="go_to_log_in">Go To Log In</string>
    <string name="are_you_a_storyteller">Are You A StoryTeller</string>
    <string name="welcome">Welcome</string>
    <string name="sheettype">Sheet Type</string>
    <string name="name">Name:</string>
    <string name="playerSheetName">Player:</string>
    <string name="chronicle">Chronicle:</string>
    <string name="textspacefiller">-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</string>
    <string name="blankspace">______</string>
    <string name="nature">Nature:</string>
    <string name="demeanor">Demeanor:</string>
    <string name="concept">Concept:</string>
    <string name="attributes">Attributes</string>
    <string name="physical">Physical</string>
    <string name="social">Social</string>
    <string name="sociallabel">Social</string>
    <string name="mental">Mental</string>
    <string name="strength">Strength: </string>
    <string name="charisma">Charisma: </string>
    <string name="perception">Perception: </string>
    <string name="wits">Wits: </string>
    <string name="manipulation">Manipulation:</string>
    <string name="stamina">Stamina:</string>
    <string name="intelligence">Intelligence:</string>
    <string name="appearance">Appearance:</string>
    <string name="dexterity">Dexterity:</string>
    <string name="willpower">Willpower</string>
    <string name="health">Health</string>
    <string name="sheets">Sheets</string>
    <string name="go">Go</string>
    <string name="return_to_home">Return To Home Page</string>
    <string name="enter_character_name">Enter Character Name</string>
    <string name="create_sheet">Create Sheet</string>
</resources>