<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:text="@string/wodcs_sign_up"
        android:textAlignment="center"
        android:textSize="36sp"
        android:paddingTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/UsernameLabelTextView"
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_title"
        />

    <EditText
        android:id="@+id/UsernameInputEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_user_name"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/UsernameLabelTextView"
        app:layout_constraintStart_toEndOf="@id/UsernameLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/sign_up_title" />

    <TextView
        android:id="@+id/PasswordLabelTextView"
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/UsernameLabelTextView" />

    <EditText
        android:id="@+id/PasswordInputEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_password"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/PasswordLabelTextView"
        app:layout_constraintStart_toEndOf="@id/PasswordLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/sign_up_title" />

    <TextView
        android:id="@+id/PasswordAgainLabelTextView"
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/password_again"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PasswordLabelTextView" />

    <EditText
        android:id="@+id/PasswordAgainInputEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_your_password_again"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/PasswordAgainLabelTextView"
        app:layout_constraintStart_toEndOf="@id/PasswordAgainLabelTextView" />


    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/PasswordAgainInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/sign_up"
        />

    <Button
        android:id="@+id/Return_Button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/SignUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/return_to_main_page"
        />



</androidx.constraintlayout.widget.ConstraintLayout>